--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@
             color: white;
             font-size: 1.5rem;
             cursor: pointer;
+            position: fixed;
         }
 
       /* ===== HERO SECTION ===== */
