--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ img, video {
 header {
   width: 100%;
   overflow-x: hidden;
+    align-items: center;
 }
 
 .logo img {
@@ -580,6 +581,7 @@ header {
   color: #f1f1f1;
   padding: 60px 20px 20px;
   font-family: 'Poppins', sans-serif;
+    align-items: center;
 }
         /* Footer */
 .footer-container {
@@ -588,6 +590,7 @@ header {
   gap: 30px;
   max-width: 1200px;
   margin: auto;
+    align-items: center;
 }
 
 .footer-col h4 {
