--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
 /* ==== FIXES ZA MOBILE VIEW ==== */
 
 /* Zuia kitu chochote kisitoke nje ya screen */
-img, video {
+img, iframe, video {
   max-width: 100%;
   height: auto;
   display: block;
@@ -103,7 +103,7 @@ header {
 }
 
 .logo img {
-  height: 100px; /* badala ya 120px kwenye simu */
+  height: 60px; /* badala ya 120px kwenye simu */
   max-width: 100%;
 }
 
@@ -116,7 +116,7 @@ header {
   }
 
   .logo img {
-    height: 100px;
+    height: 50px;
   }
 
   nav {
@@ -141,6 +141,13 @@ header {
     display: block;
     padding: 10px;
   }
+}
+
+/* Zuia map kuvuja kulia */
+.map iframe {
+  width: 100% !important;
+  max-width: 100%;
+  border: 0;
 }
 
       /* ===== HERO SECTION ===== */
