--- a/style.css
+++ b/style.css
@@ -368,6 +368,7 @@ header {
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
+            align-items: center;
         }
         
         .team-member:hover {
@@ -381,6 +382,8 @@ header {
             object-fit: cover;
             margin-bottom: 1rem;
             border: 5px solid var(--light);
+            display: block;
+            margin: auto;
         }
         
         .team-member h3 {
