--- a/style.css
+++ b/style.css
@@ -592,6 +592,7 @@ header {
   padding: 60px 20px 20px;
   font-family: 'Poppins', sans-serif;
     align-items: center;
+    flex-direction: column;
 }
         /* Footer */
 .footer-container {
@@ -601,6 +602,7 @@ header {
   max-width: 1200px;
   margin: auto;
     align-items: center;
+    flex-direction: column;
 }
 
 .footer-col h4 {
